# zint-binary

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: echo.rs  main.rs
