[package]
name = "zint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
base64 = "0.13.0"
fstrings = "0.2.3"
futures = "0.3.17"
rand = "0.8.4"
tokio = { version = "1.14.0", features = ["macros", "fs", "rt", "rt-multi-thread", "io-util", "time"] }
