[package]
name = "zint"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
fstrings = "0.2.3"
rand = "0.8.4"
const_format = "0.2.24"
serde_json = "1.0.81"
clap = { version = "~3.1",  features = ["derive", "cargo"] }
async-std = "1.10.0"
tokio = { version = "1.14.0", features = ["macros", "signal", "fs", "rt", "rt-multi-thread", "io-util", "time"] }
futures = "0.3.17"
atty = "0.2.14"
libc = "0.2.139"